5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1800_2563.log
== SUBMITION (2019-06-06 10:12:32) 
-- CODE:
from numpy import *
v1=array(eval(input()))

while (size(v1)>1):
	soma=0
	for i in range(size(v1)):
		if(v[i]>=5 and v[i]<7):
			soma =soma+1
	print(soma)
	v1=array(eval(input()))

-- EXECUTION TIME:
0.888248
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2563/main.py", line 7, in <module>
    if(v[i]>=5 and v[i]<7):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:12:36) 
-- CODE:
from numpy import *
v1=array(eval(input()))

while (size(v1)>1):
	soma=0
	for i in range(size(v1)):
		if(v[i]>=5 and v[i]<7):
			soma =soma+1
	print(soma)
	v1=array(eval(input()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:13:04) 
-- CODE:
from numpy import *
v1=array(eval(input()))

while (size(v1)>1):
	soma=0
	for i in range(size(v1)):
		if(v1[i]>=5 and v1[i]<7):
			soma =soma+1
	print(soma)
	v1=array(eval(input()))

-- EXECUTION TIME:
0.98993
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
